trying to fix quarto HELP

--- a/labs/index.html
+++ b/labs/index.html
@@ -168,6 +168,14 @@ window.Quarto = {
     <a class="dropdown-item" href="../weekly-notes/week-02-notes.html">
  <span class="dropdown-text">Week 2</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="../weekly-notes/week-03-notes.html">
+ <span class="dropdown-text">Week 3</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="../weekly-notes/week-04-notes.html">
+ <span class="dropdown-text">Week 4</span></a>
+  </li>  
     </ul>
   </li>
   <li class="nav-item dropdown ">
@@ -176,8 +184,12 @@ window.Quarto = {
     </a>
     <ul class="dropdown-menu" aria-labelledby="nav-menu-labs">    
         <li>
-    <a class="dropdown-item" href="../labs/lab0/scripts/lab0_template.html">
+    <a class="dropdown-item" href="../labs/lab0/lab0_template.qmd">
  <span class="dropdown-text">Lab 0: dplyr Basics</span></a>
+  </li>  
+        <li>
+    <a class="dropdown-item" href="../labs/lab-01.qmd">
+ <span class="dropdown-text">Lab 1</span></a>
   </li>  
     </ul>
   </li>
