--- a/labs/index.html
+++ b/labs/index.html
@@ -172,6 +172,10 @@ window.Quarto = {
     <a class="dropdown-item" href="../weekly-notes/week-03-notes.html">
  <span class="dropdown-text">Week 3</span></a>
   </li>  
+        <li>
+    <a class="dropdown-item" href="../weekly-notes/week-04-notes.html">
+ <span class="dropdown-text">Week 4</span></a>
+  </li>  
     </ul>
   </li>
   <li class="nav-item dropdown ">
@@ -184,7 +188,7 @@ window.Quarto = {
  <span class="dropdown-text">Lab 0: dplyr Basics</span></a>
   </li>  
         <li>
-    <a class="dropdown-item" href="../labs/lab1/assignment1_template.html">
+    <a class="dropdown-item" href="../labs/lab1/assignment1_template.qmd">
  <span class="dropdown-text">Lab 1: Census Data Exploration</span></a>
   </li>  
     </ul>
@@ -231,7 +235,29 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-listing-date-sort="1759032000000" data-listing-file-modified-sort="1758570342830" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="778">
+<div class="quarto-post image-right" data-index="0" data-listing-file-modified-sort="1759164431686" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="thumbnail"><a href="../labs/lab0/scripts/index.html" class="no-external">
+
+<!-- img(9CEB782EFEE6)[progressive=false, height=]:listing:labs/lab0/scripts/index.html -->
+
+</a></div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="../labs/lab0/scripts/index.html" class="no-external">index</a>
+</h3>
+<div class="listing-subtitle">
+<a href="../labs/lab0/scripts/index.html" class="no-external"></a>
+</div>
+<div class="delink listing-description"><a href="../labs/lab0/scripts/index.html" class="no-external">
+<!-- desc(5A0113B34292)[max=175]:labs/lab0/scripts/index.html -->
+</a></div>
+</div>
+<div class="metadata">
+<a href="../labs/lab0/scripts/index.html" class="no-external">
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1759118400000" data-listing-file-modified-sort="1758570342830" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="4" data-listing-word-count-sort="778">
 <div class="thumbnail"><a href="../labs/lab0/scripts/lab0_template.html" class="no-external">
 
 <!-- img(9CEB782EFEE6)[progressive=false, height=]:listing:labs/lab0/scripts/lab0_template.html -->
@@ -251,7 +277,7 @@ window.Quarto = {
 <div class="metadata">
 <a href="../labs/lab0/scripts/lab0_template.html" class="no-external">
 <div class="listing-date">
-Sep 28, 2025
+Sep 29, 2025
 </div>
 <div class="listing-author">
 Alexandra Stauffer
@@ -259,27 +285,49 @@ Alexandra Stauffer
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-listing-date-sort="1759032000000" data-listing-file-modified-sort="1759103775516" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="15" data-listing-word-count-sort="2893">
-<div class="thumbnail"><a href="../labs/lab1/assignment1_template.html" class="no-external">
+<div class="quarto-post image-right" data-index="2" data-listing-file-modified-sort="1759164474364" data-listing-reading-time-sort="1" data-listing-word-count-sort="1">
+<div class="thumbnail"><a href="../labs/lab1/index.html" class="no-external">
 
-<!-- img(9CEB782EFEE6)[progressive=false, height=]:listing:labs/lab1/assignment1_template.html -->
+<!-- img(9CEB782EFEE6)[progressive=false, height=]:listing:labs/lab1/index.html -->
 
 </a></div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="../labs/lab1/assignment1_template.html" class="no-external">Lab 1: Census Data Quality for Policy Decisions</a>
+<a href="../labs/lab1/index.html" class="no-external">index</a>
 </h3>
 <div class="listing-subtitle">
-<a href="../labs/lab1/assignment1_template.html" class="no-external">Evaluating Data Reliability for Algorithmic Decision-Making</a>
+<a href="../labs/lab1/index.html" class="no-external"></a>
 </div>
-<div class="delink listing-description"><a href="../labs/lab1/assignment1_template.html" class="no-external">
-<!-- desc(5A0113B34292)[max=175]:labs/lab1/assignment1_template.html -->
+<div class="delink listing-description"><a href="../labs/lab1/index.html" class="no-external">
+<!-- desc(5A0113B34292)[max=175]:labs/lab1/index.html -->
 </a></div>
 </div>
 <div class="metadata">
-<a href="../labs/lab1/assignment1_template.html" class="no-external">
+<a href="../labs/lab1/index.html" class="no-external">
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="3" data-listing-date-sort="1759118400000" data-listing-file-modified-sort="1759113570392" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="16" data-listing-word-count-sort="3149">
+<div class="thumbnail"><a href="../labs/lab1/stauffer_alex_assignment1_template.html" class="no-external">
+
+<!-- img(9CEB782EFEE6)[progressive=false, height=]:listing:labs/lab1/stauffer_alex_assignment1_template.html -->
+
+</a></div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="../labs/lab1/stauffer_alex_assignment1_template.html" class="no-external">Lab 1: Census Data Quality for Policy Decisions</a>
+</h3>
+<div class="listing-subtitle">
+<a href="../labs/lab1/stauffer_alex_assignment1_template.html" class="no-external">Evaluating Data Reliability for Algorithmic Decision-Making</a>
+</div>
+<div class="delink listing-description"><a href="../labs/lab1/stauffer_alex_assignment1_template.html" class="no-external">
+<!-- desc(5A0113B34292)[max=175]:labs/lab1/stauffer_alex_assignment1_template.html -->
+</a></div>
+</div>
+<div class="metadata">
+<a href="../labs/lab1/stauffer_alex_assignment1_template.html" class="no-external">
 <div class="listing-date">
-Sep 28, 2025
+Sep 29, 2025
 </div>
 <div class="listing-author">
 Alexandra Stauffer
